2002-06-22  Ryan Nunn  <triforce@merlin.net.au>
	* LOTS OF FILES : Added code to do caching out to memory. However, it's
	  disabled for the moment. Need to #define WANT_MAP_CACHE_OUT to enable
	  it. Added lots of get_ireg_size() methods that return the size
	  required to save the ireg of each object.
	* gumps/Paperdoll_gump*.* : Fixing up various paperdoll related problems
	* actors.h, objs/*.*, msvcstuff/find_nearby.h, usecode/intrinsics.cc : 
	  Cleanup removing dynamic_casts.
	* windrag.* : Is now windows only, and is only compiled if actually
	  compiling with Exult studio support.
	* various other files: Fixing misc compiling problems

2002-06-21  Jeff Freedman  <jsf@usf-cf-x86-linux-1>

	* gamerend.h:  Helper-class added to do rendering.

	* gamewin.h,shapeid.h, etc: ShapeID::paint_shape() replaces one of the
	paint_shape()'s in Game_window, and gamewin.h no longer includes
	shapeid.h. 

2002-06-21  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* Paperdoll_gump.cc: fixed bug when displaying usecode container
	* objs.cc: zero-weight fix
	* gamewin.cc: display object weight

2002-06-21  Jeff Freedman  <jsf@usf-cf-x86-linux-1>

	* actors.cc (Npc_actor): Cleanup: Lots more dynamic_cast's are gone.

2002-06-21  Darke  <darke@users.sourceforge.net>
	* shapeid.cc: Added using declarations. Committed for Kirben.

2002-06-20  Jeff Freedman  <jsf@usf-cf-x86-linux-1>

	* objs.{cc,h},etc:  Added 'change_frame()' to set repaint area.
	* gamewin.h (public): get_info(), etc. moved to ShapeID.
	* gamewin.h:  Hit pixel, etc. replaced by an array.

2002-06-19  Jeff Freedman  <jeff@amy.nerble.net>

	* shapeid.h (public),etc: New 'Shape_manager' class takes over the
	various .vga files from Game_window.

2002-06-19  Jeff Freedman  <jsf@usf-cf-x86-linux-1>

	* shapeid.cc,etc:  Game_window::get_info(Game_object *) is
	replaced by ShapeID.get_info().
	* Lots:  Cleanup:  Game_window::get_game_window() => get_instance().