@@ -23,7 +23,7 @@
 #include <iostream>
 
 #ifdef WIN32
-#ifndef WIN32_LEAN_AND_MEAN
+#ifndef WIN32_LEAN_AND_MEAN	
 #define WIN32_LEAN_AND_MEAN
 #endif
 #include <windows.h>
