@@ -1,3 +1,11 @@
+2002-06-23  Ryan Nunn  <triforce@merlin.net.au>
+	* msvcstuff/find_nearby.h : Removed because it's now shared for all
+	* Makefile.am : Removed msvcstuff/find_nearby.h
+	* objs/find_nearby.h : Added so it can be used by all
+	* objs/Makefile.am : Added find_nearby.h
+	* objs/*.* : Removed old Game_object::find_nearby template and now use
+	  find_nearby.h and macros.
+
 2002-06-22  Ryan Nunn  <triforce@merlin.net.au>
 	* LOTS OF FILES : Added code to do caching out to memory. However, it's
 	  disabled for the moment. Need to #define WANT_MAP_CACHE_OUT to enable
